--- a/style.css
+++ b/style.css
@@ -1,3 +1,82 @@
-#canvas {
-    border: 1px black solid;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: gray;
+}
+
+#main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 6px solid black;
+    background-color: #a16A4B;
+}
+.top {
+    display: flex;
+    justify-content: center;
+    height: 20px;
+    width: 810px;
+}
+.middle {
+    display: flex;
+    flex-direction: row;
+}
+.left {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 820px;
+    width: 20px;
+}
+.right {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 820px;
+    width: 20px;
+}
+.bot {
+    display: flex;
+    justify-content: center;
+    height: 20px;
+    width: 810px;
+}
+.box-width {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    color: white;
+}
+.box-width-updown {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    color: white;
+    transform: rotate(180deg);
+}
+.box-height {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    color: white;
+    
+}
+.box-height-updown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    color: white;
+    transform: rotate(180deg);
 }
