--- a/style.css
+++ b/style.css
@@ -1,82 +1,182 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 body {
-    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #312e2b;
+    margin-top: 40px;
 }
 
 #main {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    position: relative;
+    width: 640px;
+    height: 640px;
+    flex-wrap: wrap;
 }
-.content {
+
+#a8 {
+    border-radius: 4px 0 0 0;
+}
+#h8 {
+    border-radius: 0 4px 0 0;
+}
+#a1 {
+    border-radius: 0 0 0 4px;
+}
+#h1 {
+    border-radius: 0 0 4px 0;
+}
+
+#main.reversed {
+    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
+}
+
+#main.reversed #h1 {
+    border-radius: 4px 0 0 0;
+}
+#main.reversed #a1 {
+    border-radius: 0 4px 0 0;
+}
+#main.reversed #h8 {
+    border-radius: 0 0 0 4px;
+}
+#main.reversed #a8 {
+    border-radius: 0 0 4px 0;
+}
+/* pieces actions */
+.piece-box {
+    width: 80px;
+    height: 80px;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.piece-box.white-box {
+    background: #eeeed2;
+}
+.piece-box.black-box {
+    background: #769656;
+} 
+.piece {
+    width: 80px;
+    height: 80px;
+}
+.piece-box.piece-hover {
+    background-color: #EFEA5A;
+}
+.piece-box.piece-clicked {
+    background-color: #16DB93;
+}
+.premoves {
+    background-color: #048BA8;
+}
+.win {
+    background-color: #A4036F;
+    background-color: #F29E4C;
+}
+
+.piece-box.piece-pointer {
+    cursor: pointer;
+}
+
+/* ============================  */
+.left-panel {
+    position: absolute;
+    display: flex;
+    left: -20px;
     flex-direction: column;
-    border: 6px solid black;
-    background-color: #a16A4B;
 }
-.top {
+
+.bottom-panel {
+    position: absolute;
     display: flex;
+    bottom: -25px;
+}
+
+.number {
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    height: 20px;
-    width: 810px;
+    height: 80px;
 }
-.middle {
+
+.letter {
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
     display: flex;
-    flex-direction: row;
-}
-.left {
-    display: flex;
+    align-items: center;
     justify-content: center;
+    width: 80px;
+}
+
+#actions {
+    display: flex;
     flex-direction: column;
-    height: 820px;
-    width: 20px;
+    margin: 10px 20px;
+    align-self: flex-start;
 }
-.right {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 820px;
-    width: 20px;
-}
-.bot {
-    display: flex;
-    justify-content: center;
-    height: 20px;
-    width: 810px;
-}
-.box-width {
-    display: flex;
-    justify-content: center;
+
+.action-button {
+    border: none;
     width: 100px;
+    height: 40px;
+    background-color: #769656;
     color: white;
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    font-family: 'Noto Sans', sans-serif;
+    border-radius: 4px;
+    cursor: pointer;
 }
-.box-width-updown {
-    display: flex;
-    justify-content: center;
-    width: 100px;
-    color: white;
-    transform: rotate(180deg);
+
+#change-sides.disabled {
+    opacity: 0.5;
+    cursor: default;
 }
-.box-height {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-    color: white;
-    
+#change-sides.disabled:hover {
+    background-color: #769656;
 }
-.box-height-updown {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-    color: white;
-    transform: rotate(180deg);
+.action-button:hover {
+    background-color: #567636;
+}
+
+@media only screen and (max-width: 770px), (max-height: 700px) {
+    body {
+        margin-top: 20px;
+    }
+    #main {
+        width: 320px;
+        height: 320px;
+    }
+    .piece-box {
+        width: 40px;
+        height: 40px;
+    }
+    .number {
+        height: 40px;
+    }
+    .letter {
+        width: 40px;
+    }
+    .piece {
+        width: 40px;
+        height: 40px;
+    }
 }
