--- a/style.css
+++ b/style.css
@@ -136,11 +136,40 @@ body {
 }
 
 .check-king {
-    background-color: #F29E4C;
+    background-color: #F29E4C !important;
 }
 
-.win {
-    background-color: #A4036F;
+.winner-backdrop {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+}
+
+.winner-backdrop.hidden {
+    display: none;
+}
+.winner {
+    /* background-color: #A4036F; */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 200px;
+    margin-left: -100px;
+    height: 50px;
+    margin-top: -25px;
+    z-index: 10;
+    background-color: orange;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(0 0 0 / 45%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 600;
+    color: #312e2b;
+    font-family: "Noto Sans";
+    text-transform: uppercase;
 }
 
 .piece-box.piece-pointer,
